# idados_dosbox

./: .gitignore  README.md  configure.ac  configure.in
XCode/: config.h
XCode/dosbox.xcodeproj/: project.pbxproj
dosbox/include/: debug.h
dosbox/src/: dosbox.cpp
dosbox/src/debug/: Makefile.am  debug.cpp  server.cpp
dosbox/src/platform/visualc/: config.h
dosbox/visualc_net/: dosbox.VC.opendb  dosbox.vcxproj  dosbox.vcxproj.filters
idados/: common_local_impl_fixed.cpp  dosbox_debmod.cpp  dosbox_rstub.cpp  idados.sdf  idados.sln  idados.vcxproj  idados.vcxproj.filters  rpc_debmod_dosbox.cpp
include/: debug.h  mouse.h  programs.h
src/: Makefile.am  dosbox.cpp  winres.rc
src/debug/: Makefile.am  debug.cpp  debug_gui.cpp  debug_inc.h  debug_remote.h  debug_remote_inc.h  pack.cpp  pro_util.cpp  server.cpp  server.h  server2.h
src/dos/: dos_execute.cpp
src/platform/visualc/: config.h
visualc_net/: dosbox.vcxproj  dosbox.vcxproj.filters  dosbox_vs2010.sln
